# cpp-middle-project-sprint-6_task_dispatcher

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  Roadmap.md  blueprint.txt  main.cpp
include/: logger.hpp  task_dispatcher.hpp
include/queue/: bounded_queue.hpp  priority_queue.hpp  queue.hpp  unbounded_queue.hpp
include/thread_pool/: thread_pool.hpp
src/: CMakeLists.txt  task_dispatcher.cpp
src/queue/: CMakeLists.txt  bounded_queue.cpp  priority_queue.cpp  unbounded_queue.cpp
src/thread_pool/: CMakeLists.txt  thread_pool.cpp
tests/: CMakeLists.txt  task_dispatcher.cpp
tests/queue/: CMakeLists.txt  bounded_queue.cpp  priority_queue.cpp  unbounded_queue.cpp
tests/thread_pool/: CMakeLists.txt  thread_pool.cpp
