set(target dispatcher_test)

add_executable(${target}
    task_dispatcher.cpp
        thread_pool/thread_pool.cpp
)

target_link_libraries(${target}
    PRIVATE
        GTest::GTest
        GTest::Main
        task_dispatcher
)

add_test(NAME ${target} COMMAND ${target})

add_subdirectory(queue)
add_subdirectory(thread_pool)